--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div class="top-container">
     <h1> CLL122 Project</h1>
     <h2 class="student">Reactor Calculator</h2>
-    <img src="images/Reactor.jpg" alt="" class="Reactor">
+    <img src="Reactor.jpg" alt="" class="Reactor">
   </div>
 
 
@@ -82,7 +82,7 @@
         </form>
         <div id="CSTR" class="form">
           <form>
-            <img src="images/vol.png" alt="" class="I2">
+            <img src="vol.png" alt="" class="I2">
             <br>
             <label for="radius">Enter the Molar Flow Rate</label>
             <input type="number" id="radius">
@@ -96,8 +96,8 @@
         
         <div id="RT" class="form">
           <form>
-            <img src="images/RT.png" alt="" class="I1">
-            <img src="images/tau.png" alt="" class="I3">
+            <img src="RT.png" alt="" class="I1">
+            <img src="tau.png" alt="" class="I3">
             <br>
             <label for="volume">Enter the volume of the reactor in meters cube:</label>
             <input type="number" id="volume">
@@ -111,7 +111,7 @@
 
         <div id="v" class="form">
           <form>
-            <img src="images/conc1.png" alt="" class="I4">
+            <img src="conc1.png" alt="" class="I4">
             <br>
             <label for="Conc">Enter the initial concentration of the species:</label>
             <input type="number" id="Conc">
